# Audit-Vault

./: .gitignore  CMakeLists.txt  README.md  chain.json  leader.json  peers.json  run.sh  starter.sh
blocks/: block_0.json  block_1.json  block_2.json  block_3.json  block_4.json  block_5.json  block_6.json  block_7.json  block_8.json
include/: block_scheduler.h  chain_manager.h  config_loader.h  election_manager.h  election_state.h  heartbeat_manager.h  heartbeat_table.h  leader_config.h  mempool_manager.h  merkle_tree.h  server.h
keys/: client_public.pem
proto/: block_chain.proto  common.proto  file_audit.proto
src/: block_scheduler.cpp  chain_manager.cpp  client.cpp  config_loader.cpp  election_manager.cpp  heartbeat_manager.cpp  leader_config.cpp  main.cpp  mempool_manager.cpp  merkle_tree.cpp  server.cpp
tests/: test_chain_manager.cpp
